--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://chewylewis.github.io/"
 languageCode = "en-us"
 title = "Cassie Peters' Portfolio"
 theme = "ananke"
